src/test/deca/context/invalid/self/paramVoid.deca
class A {
    void add(void x){

    }
}